--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@400;700&display=swap');
+
+body {
+    font-family: 'Geist', sans-serif;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
